# anime-subtitle

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  README_CN.md  [VCB-Studio] Steins;Gate 0 [01][Ma10p_1080p][x265_flac]_alignment.json  [VCB-Studio] Steins;Gate 0 [01][Ma10p_1080p][x265_flac]_bilingual.ass  [VCB-Studio] Steins;Gate 0 [02][Ma10p_1080p][x265_flac]_alignment.json  [VCB-Studio] Steins;Gate 0 [03][Ma10p_1080p][x265_flac]_alignment.json  [VCB-Studio] Steins;Gate 0 [04][Ma10p_1080p][x265_flac]_alignment.json  [VCB-Studio] Steins;Gate 0 [04][Ma10p_1080p][x265_flac]_bilingual.ass  [VCB-Studio] Steins;Gate 0 [05][Ma10p_1080p][x265_flac]_alignment.json  [VCB-Studio] Steins;Gate 0 [05][Ma10p_1080p][x265_flac]_bilingual.ass  [VCB-Studio] Steins;Gate 0 [06][Ma10p_1080p][x265_flac]_alignment.json  [VCB-Studio] Steins;Gate 0 [06][Ma10p_1080p][x265_flac]_bilingual.ass  [VCB-Studio] Steins;Gate 0 [07][Ma10p_1080p][x265_flac]_alignment.json  [VCB-Studio] Steins;Gate 0 [08][Ma10p_1080p][x265_flac]_alignment.json  [VCB-Studio] Steins;Gate 0 [09][Ma10p_1080p][x265_flac]_alignment.json  auto_shutdown_watcher.py  auto_watcher.py  debug_sensevoice.py  last_alignment.py  llm_translation.py  pyproject.toml  requirements.txt  webui.py
docs/: ROADMAP.md
src/animetranslator/: __init__.py  __main__.py  alignment.py  cli.py  config.py  device.py  i18n.py  logger.py  translation.py  watcher.py  webui.py
src/animetranslator/locales/: en_US.json  zh_CN.json
tests/: __init__.py
